[workspace]
members = ["dapr", "dapr-macros", "proto-gen", "examples"]
exclude = [
  ".github/workflows/dapr-bot", # Bot used in GitHub workflow
]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1"
prost = "0.14"
prost-types = "0.14"

serde = "1.0"
serde_json = "1.0"

tokio = "1.39"
tokio-stream = "0.1"
tokio-util = "0.7"

tonic = "0.14.6"
tonic-build = "0.14.6"
tonic-prost = "0.14.6"
tonic-prost-build = "0.14.6"

[workspace.package]
version = "0.19.0"
authors = ["Mike Nguyen <hey@mike.ee>", "The Dapr Authors <dapr@dapr.io>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/dapr/rust-sdk"

rust-version = "1.88.0" # MSRV
