[package]
name = "dapr-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Dapr Rust SDK (Macros)"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
async-trait = { workspace = true }
axum = "0.7"
log = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
