[package]
name = "dapr"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust SDK for dapr"
readme = "../README.md"
keywords = ["microservices", "dapr"]
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
axum = "0.7"
bytes = "1.7"
chrono = "0.4"
dapr-macros = { workspace = true }
futures = "0.3"
log = "0.4"
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true, features = ["io"] }


[dev-dependencies]
axum-test = "15.3"
once_cell = "1.19"
tokio = { workspace = true, features = ["full"] }
uuid = { version = "1.10", features = ["v4"] }
dapr = { workspace = true }
tokio-test = { workspace = true }
tokio-stream = { workspace = true }