[package]
name = "dapr"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust SDK for dapr"
readme = "README.md"
keywords = ["microservices", "dapr"]
rust-version.workspace = true

[features]
default = ["workflow"]
workflow = ["dep:dapr-durabletask", "dep:tokio-util"]

[dependencies]
async-trait = { workspace = true }
axum = "0.7"
chrono = "0.4"
dapr-durabletask = { version = "0.0.2", optional = true }
futures = "0.3"
http = "1"
log = "0.4"
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time"] }
tokio-util = { workspace = true, features = ["io"], optional = true }
tower = { version = "0.5", features = ["util"] }


[dev-dependencies]
indexmap = "=2.11.4"

once_cell = "1.19"
dapr = { path = "./" }
dapr-macros = { path = "../dapr-macros" }
tokio = { workspace = true, features = ["full"] }
uuid = { version = "=1.23.2", features = ["v4"] }
tokio-stream = { workspace = true }
hyper = "1.8.1"
http-body-util = "0.1"
