[package]
name = "examples"
authors.workspace = true
license.workspace = true
edition.workspace = true
publish = false
version = "0.0.1"
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
base64 = "0.22"
dapr = { path = "../dapr" }
dapr-macros = { path = "../dapr-macros" }
env_logger = "0.11"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

[[example]]
name = "actors-client"
path = "src/actors/client.rs"

[[example]]
name = "actors-server"
path = "src/actors/server.rs"

[[example]]
name = "bindings-input"
path = "src/bindings/input.rs"

[[example]]
name = "bindings-output"
path = "src/bindings/output.rs"

[[example]]
name = "client"
path = "src/client/client.rs"

[[example]]
name = "configuration"
path = "src/configuration/main.rs"

[[example]]
name = "crypto"
path = "src/crypto/main.rs"

[[example]]
name = "invoke-grpc-client"
path = "src/invoke/grpc/client.rs"

[[example]]
name = "invoke-grpc-server"
path = "src/invoke/grpc/server.rs"

[[example]]
name = "invoke-grpc-proxying-client"
path = "src/invoke/grpc-proxying/client.rs"

[[example]]
name = "invoke-grpc-proxying-server"
path = "src/invoke/grpc-proxying/server.rs"

[[example]]
name = "jobs"
path = "src/jobs/jobs.rs"

[[example]]
name = "pubsub-publisher"
path = "src/pubsub/publisher.rs"

[[example]]
name = "pubsub-subscriber"
path = "src/pubsub/subscriber.rs"

[[example]]
name = "query-state-1"
path = "src/query_state/query1.rs"

[[example]]
name = "query-state-2"
path = "src/query_state/query2.rs"

[[example]]
name = "secrets-bulk"
path = "src/secrets-bulk/app.rs"
