[package]
name = "dapr-bot"
authors = ["Mike Nguyen <hey@mike.ee>"]
license = "Apache-2.0"
license-file = "LICENSE"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitcode = "1.1.2"
octocrab = "0.42.1"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
